# edge-detection-app

./: .gitignore  LICENSE  README.md  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  ImageProcessor.cpp  ImageProcessor.h  native-lib.cpp
app/src/main/java/com/example/edgedetection/: CameraHelper.java  ImageProcessorNative.java  MainActivity.java  OpenGLRenderer.java  OpenGLUtils.java  TextureHelper.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  styles.xml
web/: package.json  tsconfig.json
web/public/: index.html
web/src/: app.js  server.js
